--- a/ssr+esbuild/package.json
+++ b/ssr+esbuild/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@emsquared/otto_express": "git+https://github.com/RockyEMSqr/otto_express.git",
     "@preact/preset-vite": "^2.3.0",
+    "@types/session-file-store": "^1.2.2",
     "preact-cli-widget-ts": "git+https://github.com/RockyEMSqr/preact-cli-widget-ts.git",
     "preact-render-to-string": "^5.2.2",
+    "session-file-store": "^1.5.0",
     "vite": "^3.0.9"
   },
   "devDependencies": {
